# cmake_basics

./: LICENSE  README.md
cmake_p1/: CMakeLists.txt
cmake_p3/: CMakeLists.txt
cmake_p4/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt
cmake_p4/test/: .CMakeLists.txt.swp  .Test.cpp.swp  CMakeLists.txt  Test.cpp  a.out
